--- a/Site-Dashboard/public/dashboard/site.jogos.html
+++ b/Site-Dashboard/public/dashboard/site.jogos.html
@@ -35,32 +35,38 @@
             <h1 class="titulo">Copa Noturna</h1>
             <div class="barra"></div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Rb P.S.A <img src="../assent/rbPSA.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Rb P.S.A <img src="../assent/rbPSA.png"
+                        alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x America FC P.S.A <img src="../assent/America.png" alt="">
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x America FC P.S.A <img
+                        src="../assent/America.png" alt="">
                 </span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C P.S.A <img src="../assent/Fluminense.png" alt="">
-                    </span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C P.S.A <img
+                        src="../assent/Fluminense.png" alt="">
+                </span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../assent/Trevo.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../assent/Trevo.png"
+                        alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Selecionados 
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Selecionados
                     F.C <img src="../assent/Selecionados.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x JD. Mazza<img src="../assent/Mazza.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x JD. Mazza<img src="../assent/Mazza.png"
+                        alt=""></span>
             </div>
             <div class="card">
                 <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C
                     P.S.A <img src="../assent/Fluminense.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../assent/Trevo.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../assent/Trevo.png"
+                        alt=""></span>
             </div>
             <div class="barra"></div>
             <div id="div_jogo"></div>
@@ -97,7 +103,7 @@
             <span class="texto">Quantidade de assistência</span>
             <input type="number" id="input_assistencia" class="format">
             <span class="texto">Jogo</span>
-            <input type="number" id="input_jogo" class="format">
+            <input type="number" id="input_jogo_assistencia" class="format">
             <button onclick="assistencias()" id="btn_assistencia" class="botao">Enviar</button>
             <div class="barra"></div>
         </div>
