Atualização dos graficos, novo botão para visualizar grafico

--- a/Site-Dashboard/public/dashboard/site.jogos.html
+++ b/Site-Dashboard/public/dashboard/site.jogos.html
@@ -86,7 +86,8 @@
             <input type="number" id="input_gols" class="format">
             <span class="texto">Jogo</span>
             <input type="number" id="input_jogo" class="format">
-            <button onclick="gols()" id="btn_gols" class="botao">Enviar</button>
+            <button onclick="gols()" id="btn_gols" class="botao">Cadastrar</button>
+            <button onclick="atualizarGol()" id="btn_att" class="botao-atualizar">Atualizar</button>
             <div class="barra"></div>
         </div>
         <div class="direita">
@@ -104,7 +105,8 @@
             <input type="number" id="input_assistencia" class="format">
             <span class="texto">Jogo</span>
             <input type="number" id="input_jogo_assistencia" class="format">
-            <button onclick="assistencias()" id="btn_assistencia" class="botao">Enviar</button>
+            <button onclick="assistencias()" id="btn_assistencia" class="botao">Cadastrar</button>
+            <button onclick="atualizarAssistencia()" id="btn_upd" class="botao-atualizar">Atualizar</button>
             <div class="barra"></div>
         </div>
     </div>
