--- a/Site-Dashboard/public/dashboard/site.treino.html
+++ b/Site-Dashboard/public/dashboard/site.treino.html
@@ -61,13 +61,14 @@
                 <canvas id="myChart"></canvas>
             </div>
             <div class="barra"></div>
-            <span class="texto"> Digite o nome de quem fez gol no jogo</span>
+            <span class="texto"> Digite o nome de quem fez gol no treino</span>
             <input type="text" id="input_nome_gol" class="format">
             <span class="texto">Sobrenome</span>
             <input type="text" id="input_sobrenome_gol" class="format">
             <span class="texto">Quantidade de gols</span>
             <input type="number" id="input_gols" class="format">
-            <button onclick="gols()" class="botao">Enviar</button>
+            <button onclick="gols()" class="botao">Cadastrar</button>
+            <button onclick="atualizarGol()" class="botao-atualizar">Atualizar</button>
             <div class="barra"></div>
         </div>
         <div class="direita">
@@ -77,13 +78,14 @@
                 <canvas id="myChart1"></canvas>
             </div>
             <div class="barra"></div>
-            <span class="texto"> Digite o nome de quem deu assistência no jogo</span>
+            <span class="texto"> Digite o nome de quem deu assistência no treino</span>
             <input type="text" id="input_nome_assistencia" class="format">
             <span class="texto">Sobrenome</span>
             <input type="text" id="input_sobrenome_assistencia" class="format">
             <span class="texto">Quantidade de assistência</span>
             <input type="number" id="input_assistencia" class="format">
             <button onclick="assistencias()" class="botao">Enviar</button>
+            <button onclick="atualizarAssistencia()" class="botao-atualizar">Atualizar</button>
             <div class="barra"></div>
         </div>
     </div>
