Update dos gráficos para atualização de dados automática

--- a/Site-Dashboard/public/dashboard/site.jogos.html
+++ b/Site-Dashboard/public/dashboard/site.jogos.html
@@ -87,7 +87,7 @@
             <span class="texto">Jogo</span>
             <input type="number" id="input_jogo" class="format">
             <button onclick="gols()" id="btn_gols" class="botao">Cadastrar</button>
-            <button onclick="atualizarGol()" id="btn_att" class="botao-atualizar">Atualizar</button>
+            <button onclick="atualizarGol()" id="btn_att" class="botao-atualizar">Buscar Jogo</button>
             <div class="barra"></div>
         </div>
         <div class="direita">
@@ -106,7 +106,7 @@
             <span class="texto">Jogo</span>
             <input type="number" id="input_jogo_assistencia" class="format">
             <button onclick="assistencias()" id="btn_assistencia" class="botao">Cadastrar</button>
-            <button onclick="atualizarAssistencia()" id="btn_upd" class="botao-atualizar">Atualizar</button>
+            <button onclick="atualizarAssistencia()" id="btn_upd" class="botao-atualizar">Buscar Jogo</button>
             <div class="barra"></div>
         </div>
     </div>
