Adicionado verificação para sessão e correção de bug na validação de cadastro

--- a/Site-Dashboard/public/dashboard/site.cruzadinha.html
+++ b/Site-Dashboard/public/dashboard/site.cruzadinha.html
@@ -9,7 +9,7 @@
     <title>Ministério | Cruzadinha</title>
 </head>
 
-<body>
+<body onload="validarSessao()">
     <header>
         <div id="logo-Ministerio">
             <a href="../site_index.html">
@@ -377,3 +377,4 @@
         }
     }
 </script>
+<script src="../js/cod.sessao.js"></script>
