--- a/Site-Dashboard/public/dashboard/site.jogos.html
+++ b/Site-Dashboard/public/dashboard/site.jogos.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body onload="validarSessao()">
     <header>
         <div id="logo-Ministerio">
             <a href="../site_index.html">
@@ -115,3 +115,4 @@
 </html>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="../js/cod.jogos.js"></script>
+<script src="../js/cod.sessao.js"></script>
