--- a/Site-Dashboard/public/site.login.html
+++ b/Site-Dashboard/public/site.login.html
@@ -47,12 +47,17 @@
         </form>
         <p class="registrar">Não possui uma conta?<a href="site.cadastro.html"> Registre-se aqui</a></p>
     </div>
-
+    <div id="div_aguardar" class="loading">
+        <img src="assent/loading-gif.gif" id="loading-gif">
+    </div>
+    <div id="div_alert">
+    </div>
     <footer>
         © 2024 MorallesTech. Todos os direitos reservados.
     </footer>
 </body>
-    <div id="div_alert"></div>
+  
 </html>
 
 <script src="js/cod.login.js"></script>
+<script src="js/cod.sessao.js"></script>
