--- a/Site-Dashboard/public/dashboard/site.contato.html
+++ b/Site-Dashboard/public/dashboard/site.contato.html
@@ -9,7 +9,7 @@
     <title>Ministério | Contato</title>
 </head>
 
-<body>
+<body onload="validarSessao()">
     <header>
         <div id="logo-Ministerio">
             <a href="../site_index.html">
@@ -78,4 +78,5 @@
 
 </html>
 
-<script src="js/cod.contato.js"></script>
+<script src="../js/cod.contato.js"></script>
+<script src="../js/cod.sessao.js"></script>
