--- a/Site-Dashboard/public/dashboard/site.treino.html
+++ b/Site-Dashboard/public/dashboard/site.treino.html
@@ -92,3 +92,4 @@
 </html>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="../js/cod.treino.js"></script>
+<script src="../js/cod.sessao.js"></script>
