--- a/Site-Dashboard/public/site.cadastro.html
+++ b/Site-Dashboard/public/site.cadastro.html
@@ -59,19 +59,23 @@
                 <p class="login">Já tem uma conta? <a href="site.login.html"> Entre aqui</a></p>
             </div>
         </form>
-       
+
     </div>
-   
+    <div id="div_aguardar" class="loading">
+        <img src="assent/loading-gif.gif" id="loading-gif">
+    </div>
+    <div id="div_alert"></div>
     <footer>
         © 2024 MorallesTech. Todos os direitos reservados.
     </footer>
-    <div id="div_alert"></div>
-   
-    
+
+
+
 </body>
 
-   
+
 </html>
 
 
 <script src="js/cod.cadastro.js"></script>
+<script src="js/cod.sessao.js"></script>
