Select da model com cálculos matemáticos max e sum

--- a/Site-Dashboard/public/dashboard/site.treino.html
+++ b/Site-Dashboard/public/dashboard/site.treino.html
@@ -52,7 +52,7 @@
             <div id="escudo-baixo">
                     <img src="../assent/Soccer-pana.svg" alt="escudo" class="img-escudo">
             </div>
-           
+            <div id="div_treino"></div>
         </div>
         <div class="meio">
             <h1 class="titulo">Artilheiros</h1>
