Atualização nos alertas css + otimização de input nos graficos

--- a/Site-Dashboard/public/dashboard/site.contato.html
+++ b/Site-Dashboard/public/dashboard/site.contato.html
@@ -48,12 +48,6 @@
                             <label for="label_nome">Nome Completo</label>
                             <input type="text" required id="input_nome" placeholder="Digite o seu nome completo">
                         </div>
-
-                        <div class="input-container">
-                            <label for="label_email">Email</label>
-                            <input type="email" required id="input_email" placeholder="Digite o seu email">
-                        </div>
-
                         <div class="input-container">
                             <label for="label_assunto">Assunto</label>
                             <input type="text" required id="input_assunto" placeholder="Digite o assunto">
@@ -65,6 +59,7 @@
                         <div class="input-container">
                             <button onclick="enviar()" class="botao-enviar">Enviar</button>
                         </div>
+                        <div id="div_alert"></div>
                     </div>
                 </form>
             </div>
