Adicionando um botão na tela de inicio

--- a/Site-Dashboard/public/index.html
+++ b/Site-Dashboard/public/index.html
@@ -26,15 +26,10 @@
             <a href="site.login.html" class="login-button">LOGIN</a>
         </div>
     </header>
-    <div class="tema">
-        <div class="esquerda"></div>
-        <div class="meio">
-        </div>
-        <div class="direita"></div>
-    </div>
-
-
-    
+    <button id="conhecer" onclick="conhecer()">
+        <span><B>NOS CONHEÇA</B></span>
+        <p>Clique aqui para saber mais sobre nós!</p>
+    </button>
     <footer>
         © 2024 MorallesTech. Todos os direitos reservados.
     </footer>
@@ -42,3 +37,10 @@
 </body>
 
 </html>
+
+<script>
+    function conhecer() {
+        window.location = "site.sobre-nos.html"
+    }
+
+</script>
